<resources>
    <string name="app_name" translatable="false">Point Of Sale</string>
    <string name="admob_application_id" translatable="false">ca-app-pub-8638037215789792~9492303485</string>
    <string name="admob_banner_ads_id" translatable="false">ca-app-pub-8638037215789792/9766802475</string>
    <string name="admob_interstitial_ads_id" translatable="false">ca-app-pub-8638037215789792/7238627897</string>
    <string name="hello">Hello</string>
    <string name="username">Zaid</string>
    <string name="welcome">Welcome to App Point Of Sale</string>
    <string name="text_english">English</string>
    <string name="text_indonesia">Indonesian</string>
    <string name="money">$96.00</string>
    <string name="one">1</string>
    <string name="oneKg">1 kg</string>
    <string name="plus">+</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add_category">Add Category</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_delivery">Add Delivery</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="add_product">Add Product</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="add_suppliers">Add Suppliers</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_weight">Add Weight</string>
    <string name="all_customer">All Customer</string>
    <string name="all_expense">All Expense</string>
    <string name="all_expense_report">All Expense Report</string>
    <string name="all_orders">All Orders</string>
    <string name="all_payment_method">All Payment Method</string>
    <string name="all_product">All Product</string>
    <string name="all_sales">All Sales</string>
    <string name="all_sales_report">All Sales Report</string>
    <string name="all_suppliers">All Suppliers</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="available_stock">Available Stock</string>
    <string name="back">Back</string>
    <string name="backup_completed_successfully">Backup Completed Successfully</string>
    <string name="backup_folder_not_present">Backup folder not present</string>
    <string name="backup_successfully_loaded">Backup successfully loaded!</string>
    <string name="backup_to_google_drive">Backup to Google Drive</string>
    <string name="bluetooth_not_available">Bluetooth not available</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_scan">Scan devices</string>
    <string name="buy_price">Buy Price:&#160;</string>
    <string name="camera_permission">Camera Permission Required</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cash">CASH</string>
    <string name="categories">Categories</string>
    <string name="category_added_successfully">Category Added Successfully</string>
    <string name="category_deleted">Category Deleted</string>
    <string name="category_name">Category Name</string>
    <string name="category_updated">Category Updated</string>
    <string name="change_order_status">Change Order Status</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_file">Choose a file</string>
    <string name="choose_product_image">Choose Product Image</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_fail">Printer connection error</string>
    <string name="connect_lost">Disconnected</string>
    <string name="connected">Connect to</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_cell">Customer Cell</string>
    <string name="customer_deleted">Customer Deleted</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_successfully_added">Customer Successfully Added</string>
    <string name="customers">Customers</string>
    <string name="daily">Daily</string>
    <string name="data">Data</string>
    <string name="data_backup">Data Backup</string>
    <string name="data_export_fail">Data Export Fail</string>
    <string name="data_exporting_please_wait">Data Exporting. Please wait. . .</string>
    <string name="data_import_fail">Data Import Fail</string>
    <string name="data_importing_please_wait">Data importing. Please wait. . .</string>
    <string name="data_successfully_exported">Data Successfully Exported</string>
    <string name="data_successfully_imported">Data Successfully Imported</string>
    <string name="database_Import_completed">Database Import Completed</string>
    <string name="database_backup">Database Backup</string>
    <string name="database_import">Database Import</string>
    <string name="database_restore">Database Restore:</string>
    <string name="date">Date:</string>
    <string name="dateTime">Date Time</string>
    <string name="delivery_deleted">Delivery Deleted</string>
    <string name="delivery_updated">Delivery Updated</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">Select</string>
    <string name="discount">Discount</string>
    <string name="discount_cant_be_greater_than_total_price">Discount can\'t_be greater than total price</string>
    <string name="edit">Edit</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="edit_suppliers">Edit Suppliers</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="enter_customer_address">Enter Customer Address</string>
    <string name="enter_customer_cell">Enter Customer Cell</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_delivery_name">Enter Delivery Name</string>
    <string name="enter_local_database_backup_name">Enter Local Database Backup Name</string>
    <string name="enter_payment_method_name">Enter Payment Method Name</string>
    <string name="enter_suppliers_address">Enter Suppliers Address</string>
    <string name="enter_suppliers_cell">Enter Suppliers Cell</string>
    <string name="expense">Expense</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="expense_name">Expense Name</string>
    <string name="no_order_found">No Order Found</string>
    <string name="noteSpace">Note&#160;</string>
    <string name="payment">PAYMENT</string>
    <string name="pick_up">PICK UP</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_stock">Product Stock</string>
    <string name="products">Products</string>
    <string name="search_here">Search Here. . . .</string>
    <string name="select_customer">SELECT CUSTOMER</string>
    <string name="select_order_type">SELECT ORDER TYPE</string>
    <string name="select_payment_method">SELECT PAYMENT METHOD</string>
    <string name="sub_total">Sub Total</string>
    <string name="submit">SUBMIT</string>
    <string name="total_price">Total Price:</string>
    <string name="total_tax">Total Tax</string>
    <string name="want_to_delete_expense">Want to Delete Expense ?</string>
    <string name="walk_in_customer">Walk In Customer</string>
    <string name="weight">Weight:</string>
    <string name="zero_zero">00</string>
    <string name="zeroDecimal">0.00</string>
</resources>