<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/products"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/image_placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="2"
                    android:minLines="2"
                    android:padding="3dp"
                    android:text="@string/product_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/sailec_regular" />

                <TextView
                    android:id="@+id/tv_stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/product_stock"
                    app:fontFamily="@font/sailec_regular" />

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/weight"
                    app:fontFamily="@font/sailec_regular" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/price"
                    app:fontFamily="@font/sailec_regular" />

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_add_cart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="?android:attr/colorPrimary"
                        android:fontFamily="@font/sailec_regular"
                        android:text="@string/add_to_cart"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>