<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_expense"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/expense"
                android:padding="10dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_question" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/linear3"
            app:layout_constraintLeft_toRightOf="@id/linear1"
            app:layout_constraintStart_toEndOf="@+id/linear1"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_expense_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sailec_regular"
                android:text="@string/expense_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_expense_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sailec_regular"
                android:padding="2dp"
                android:text="@string/expense_amount"
                android:textColor="@color/red_pigment" />

            <TextView
                android:id="@+id/tv_expense_dateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sailec_regular"
                android:padding="2dp"
                android:text="@string/dateTime"
                android:textColor="@color/red_pigment" />

            <TextView
                android:id="@+id/tv_expense_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sailec_regular"
                android:padding="2dp"
                android:text="@string/noteSpace"
                android:textColor="@color/red_pigment" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="33dp"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_expense_delete"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:contentDescription="@string/want_to_delete_expense"
                app:srcCompat="@drawable/ic_delete" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>