<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".orders.OrdersActivity">

    <EditText
        android:id="@+id/et_search_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_border"
        android:drawableEnd="@drawable/ic_search"
        android:ems="10"
        android:fontFamily="@font/sailec_regular"
        android:hint="@string/search_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_ads_id" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="?android:attr/selectableItemBackground" />

    <ImageView
        android:id="@+id/iv_no_order"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/no_order_found" />

    <TextView
        android:id="@+id/tv_no_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sailec_regular"
        android:gravity="center"
        android:text="@string/no_order_found"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="24sp" />

</LinearLayout>